GNOME Bugzilla – Bug 570941
String not marked for translation gnome-screensaver-command.c
Last modified: 2009-08-21 03:01:17 UTC
Here is a patch to mark the "The screensaver is not currently active." message for translation, as it should be. OK to commit?
Created attachment 128217 [details] [review] Proposed patch Simply add _() around the string :-)
Fixed. Thanks!