Fix untranslated message

Fixes http://bugzilla.gnome.org/show_bug.cgi?id=570941
Patch from  Luca Ferretti